# custom_gpt

./: .gitignore  README.md  custom_gpt.ipynb  pyproject.toml  requirement.txt
