[project]
name = "custom-gpt"
version = "0.1.0"
description = "A go at making my own gpt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "urllib3>=2.6.3",
]
